[SV2-547] Icons alignment issue on dashboard

--- a/resources/assets/less/base/tool/views/dashboard.less
+++ b/resources/assets/less/base/tool/views/dashboard.less
@@ -58,6 +58,12 @@
 			}
 		}
 
+		.actions,
+		.actions-thead{
+			text-align: right;
+			padding-right: 30px;
+		}
+
 		&.loading tbody:after {
 			background-color: rgba(100, 100, 100, 0.2);
 			bottom: 0;
@@ -210,6 +216,10 @@
 			font-size: 15px;
 			font-weight: 600;
 			color: @stensul-gray
+		}
+		.action,.actions-thead{
+			text-align: right;
+			padding-right: 30px;
 		}
 	}
 }
